[gd_scene load_steps=2 format=3 uid="uid://bjr1r18348lo4"]

[ext_resource type="Script" path="res://plugin/file_list/v1_0_1/ui/add_point.gd" id="1_41l4v"]

[node name="AddPoint" type="ConfirmationDialog"]
title = "View Config"
position = Vector2i(0, 36)
size = Vector2i(500, 398)
visible = true
unresizable = true
script = ExtResource("1_41l4v")

[node name="HBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="HBox"]
layout_mode = 2

[node name="Option" type="OptionButton" parent="HBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true

[node name="Control" type="Control" parent="HBox"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBox/Grid"]
layout_mode = 2
text = "Name:"
horizontal_alignment = 2

[node name="Name" type="LineEdit" parent="HBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox/Grid"]
layout_mode = 2
text = "Icon:"
horizontal_alignment = 2

[node name="Icon" type="LineEdit" parent="HBox/Grid"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="item_selected" from="HBox/HBox/Option" to="." method="_on_option_item_selected"]
[connection signal="text_changed" from="HBox/Grid/Icon" to="." method="_on_Icon_text_changed"]
